src/global.scss
* {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
}

input,
textarea {
  font-size: 16px;
}

input ::placeholder,
textarea::placeholder {
  font-size: 14px;
}

body {
  overflow: hidden;
}

.cursor-pointer {
  cursor: pointer;
}

.transition-01 {
  transition: 0.1s !important;
}

.transition-02 {
  transition: 0.2s !important;
}

.transition-03 {
  transition: 0.3s !important;
}

.text-disabled {
  color: #b0b3b8 !important;
}

.spinner-loading {
  scale: 3;
}

.show {
  opacity: 1;
  visibility: visible;
}

.hide {
  opacity: 0;
  visibility: hidden;
}

.disable-scroll {
  overflow-y: hidden;
}

.cursor-no-drop {
  cursor: no-drop !important;

  &:hover {
    svg {
      fill: gray !important;
    }
    color: gray !important;
  }
}

.btn-create-post {
  height: 36px;
  border-radius: 20px;
  outline: none;
  cursor: no-drop;
  border: none;
  outline: none;
  font-weight: 500;
  display: flex;
  align-items: center;
}

.ant-modal {
  padding: 0 !important;
  border-radius: 10px;
  border: 0.3px rgb(93, 93, 93) solid;
  overflow-x: hidden !important;

  * {
    overflow-x: hidden !important;
  }
}

.ant-modal-title {
  background-color: #fff !important;
}

.ant-modal-close {
  background-color: #7e7e7e00 !important;
}

.ant-modal-header {
  padding: 16px !important;
  background-color: transparent !important;
  margin-bottom: 0 !important;
}

.ant-modal-footer {
  padding: 16px !important;
  margin: 0 !important;
  border-top: 0.5px #7777774f solid !important;

  .btn-cancel,
  .btn-ok {
    cursor: pointer;
    overflow: hidden !important;
    width: 70px;
    height: 30px;
    border-radius: 6px;
    border: 0.5px solid #00000014 !important;
    transition: 0.2s;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .btn-ok {
    background-color: #b43c46;
    position: relative;
    color: #fff;

    .spinner-ok {
      position: absolute !important;
      scale: 1.3;
      svg {
        fill: #fff;
      }
    }

    &:hover {
      background-color: #ff2f40 !important;
    }

    &:active {
      background-color: #ff2f40 !important;
    }
  }

  .btn-cancel {
    background-color: rgb(186, 186, 186);
    color: black !important;
    color: #fff;

    &:hover {
      background-color: #ececec !important;
    }
  }
}

.ant-modal-body {
  padding: 0 12px !important;
}

.ant-modal-content {
  max-height: calc(100dvh - 40px);
  padding: 0 !important;
  color: #fff;
  border-radius: 10px !important;

  .ant-modal-close-x {
    opacity: 0.6;
    transition: 0.2s;

    &:hover {
      opacity: 1;
    }
  }
}

.text-center {
  text-align: center !important;
}

.none-copy,
img {
  -webkit-user-select: none !important;
  -khtml-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  -o-user-select: none !important;
  user-select: none !important;
}

.remove-style-link {
  color: #dbdbdb !important;
}

.remove-style-link:hover {
  color: #fff !important;
}

.ant-popover {
  .ant-popover-arrow,
  .ant-popover-content,
  .ant-popover-inner {
    background-color: transparent !important;
  }
}

.input-comment {
  transition: 0.3s;
  width: 100%;
  background-color: #3a3b3c;
  color: #fff;
  border-color: transparent;
  border: none !important;
  outline: none !important;
  resize: none !important;
  border-radius: 16px;
  padding: 10px;
  position: relative;
  width: 100%;
  font-size: 16px;
  scale: 0.99;

  &.full {
    height: 100px;
  }

  &.mini {
    height: 42px;
  }

  &::placeholder {
    color: #858585;
    font-size: 14px;
  }
}

.button-send {
  height: fit-content;
  padding: 8px;
  border-radius: 50%;
  width: fit-content;

  &.disabled {
    opacity: 0.5;
    cursor: no-drop !important;
  }

  &:hover {
    background-color: rgb(56, 56, 56);
  }

  .icon-send {
    width: 30px;
    min-width: 30px;
    height: 30px;
    background-size: contain;
    background-repeat: no-repeat;
    display: flex;
    justify-items: center;
    align-items: center;

    &svg {
      fill: red !important;
    }
  }
}

.list-comment {
  display: grid;
  gap: 16px;
}

.wrap-detail-comment {
  display: grid;
  gap: 2px;

  .sub-content-comment {
    font-size: 12px;
    color: #b0b3b8;
    min-width: fit-content;
  }
}

.control-comment {
  min-width: 25px;
  margin-top: 4px;
  display: grid;
  gap: 12px;
  height: fit-content;

  .anticon {
    width: 18px;
    height: 18px;
  }

  .control-delete,
  .control-edit {
    &:hover {
      svg {
        fill: #e4e6eb;
      }
    }

    svg {
      width: 18px;
      height: 18px;
      fill: gray;
    }
  }
}

.detail-comment {
  width: 100%;
  background-color: #3a3b3c;
  padding: 8px;
  border-radius: 16px;
  color: #e4e6eb;
  overflow-wrap: break-word;

  .owner-name {
    font-size: 14px;
    font-weight: 600;
  }
}

.cancel-edit-comment {
  font-size: 13px;
}

.description {
  word-break: break-word;
  overflow-wrap: break-word;
  max-width: calc(100vw - 64px);
}

.modal-create-post {
  color: #fff !important;
  position: relative;
  background-color: #242526;
  min-height: 500px;
  overflow-y: scroll;

  .ant-modal-content {
    max-height: calc(100dvh - 60px);
  }
}

// Custom scrollbar
// @media only screen and (min-width: 768px) {
//   /* For WebKit browsers (Safari, Chrome, etc.) */
//   ::-webkit-scrollbar {
//     width: 10px;
//   }

//   ::-webkit-scrollbar-track {
//     background-color: transparent;
//   }

//   ::-webkit-scrollbar-thumb {
//     background-color: #959595;
//     border-radius: 200px;
//   }

//   ::-webkit-scrollbar-thumb:hover {
//     background-color: rgba(91, 91, 91, 0.84);
//   }

//   /* For Firefox */
//   html {
//     scrollbar-width: thin; /* width of the entire scrollbar */
//     scrollbar-color: transparent transparent; /* color of the scroll thumb and track */
//   }

//   /* For Edge and IE */
//   body {
//     scrollbar-width: thin; /* width of the entire scrollbar */
//     scrollbar-color: transparent transparent; /* color of the scroll thumb and track */
//   }
// }

.avatar {
  border-radius: 50%;
  background-size: contain;
  background-repeat: no-repeat;
}

* {
  hr {
    margin: 4px 0 4px 0;
    &.gray {
      background-color: #7777774f !important;
    }
    border-radius: 200px;
    border: none;
    height: 1px;
  }

  .light {
    background-color: #fff !important;
    padding: 0 !important;
    border-radius: 10px;

    .ant-modal-content,
    .ant-modal-title {
      color: black !important;
      background-color: #fff !important;
    }

    .anticon-close {
      svg {
        fill: black;
      }
    }

    .btn-create-post {
      color: #fff !important;
      background-color: #b2b2b2 !important;

      &.enable {
        cursor: pointer;
        color: #ffffff !important;
        background-color: black !important;
      }
    }

    hr {
      &.gray {
        background-color: #e5e5e5 !important;
      }
    }

    .input-content-post {
      color: black !important;
    }

    .input-comment,
    .detail-comment {
      background-color: #adadad4f;
      color: black;
    }

    .button-send:hover {
      background-color: #3838381c;
    }
  }

  .dark {
    hr {
      &.gray {
        background-color: #333638 !important;
      }
    }

    .container-upload-image {
      color: #fff !important;
    }

    padding: 0 !important;
    border-radius: 10px;
    background-color: #181818 !important;

    .ant-modal-content,
    .ant-modal-title {
      color: #fff;
      background-color: #181818 !important;
    }

    .anticon-close {
      svg {
        fill: rgb(231, 231, 231);
      }
    }

    .btn-create-post {
      color: #111111 !important;
      background-color: #5e5e5e !important;

      &.enable {
        cursor: pointer;
        color: #000000 !important;
        background-color: #fff !important;
      }
    }

    .input-problem {
      color: #fff;
    }
  }
}

.icon-more-detail {
  cursor: pointer;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.2s;

  svg {
    fill: gray;
  }

  &:hover {
    background-color: rgba(128, 128, 128, 0.351);

    svg {
      fill: #fff;
    }
  }
}

.modal-delete-post,
.modal-delete-comment {
  hr {
    display: none;
  }

  .ant-modal-footer {
    border: none !important;
  }

  .ant-modal-body {
    padding: 0 16px !important;
  }
}

.modal-confirm {
  .ant-modal-content {
    background-color: #242526 !important;
    border-radius: 10px !important;
  }

  .ant-modal-title {
    background-color: #242526;
    text-align: center;
    font-size: 20px;
    color: #fff !important;
  }

  hr {
    background-color: #5b5b5b;
  }

  .children-confirm-modal {
    color: #fff;
    font-size: 16px;
  }
}

.press-active {
  cursor: pointer;
  transition: 0.1s !important;
  -webkit-user-select: none !important;
  -khtml-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  -o-user-select: none !important;
  user-select: none !important;

  &:active {
    scale: 0.95;
  }
}

.count-follower {
  font-size: 14px;
  color: #777777;
  width: fit-content;

  &:hover {
    color: #777777;
  }

  &:active {
    opacity: 0.8;
  }
}

.ant-modal-wrap {
  background-color: #0000004f !important;
}

.ant-message {
  z-index: 9999 !important;
}

.hidden-lose {
  .ant-modal-close-x {
    display: none;
  }

  .ant-modal-footer {
    padding: 0 !important;
  }
}

.width-100-per {
  width: 100% !important;
}

.ps__rail-y {
  left: unset;
  right: 0;
}

.icon-un-read {
  width: 20px;
  min-height: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #0765ff;
  position: absolute;
  top: 8px;
  left: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 13px;
  color: #fff;
  animation: shake 1s ease-in-out infinite;
  scale: 0;
}

@keyframes shake {
  0%,
  100% {
    transform: translateX(0) translateY(1px);
  }
  10%,
  30%,
  50%,
  70%,
  90% {
    transform: translateX(1px) rotate(10deg);
  }
  20%,
  40%,
  60%,
  80% {
    transform: translateX(-1px) rotate(-10deg);
  }
}

.icon-un-read.show {
  scale: 1;
}

// Style icon user-typing
.user-typing {
  display: flex;
  align-items: center;
}

.dot-typing {
  width: 5px;
  height: 5px;
  background-color: #898989;
  border-radius: 50%;
  margin-right: 4px;
  animation: dot-blink 0.8s infinite ease-in-out;
}

.dot-typing:nth-child(2) {
  animation-delay: 0.1s;
}

.dot-typing:nth-child(3) {
  animation-delay: 0.2s;
}

.dot-typing:nth-child(4) {
  animation-delay: 0.3s;
}

.dot-typing:nth-child(5) {
  animation-delay: 0.4s;
}

.dot-typing:nth-child(6) {
  animation-delay: 0.5s;
}

@keyframes dot-blink {
  0%,
  20%,
  80%,
  100% {
    transform: scale(1);
  }
  40% {
    transform: scale(1.5);
  }
}

.infinite-scroll-component {
  overflow: hidden !important;
}

